# text-rendering

./: .gitmodules  CMakeLists.txt
include/: font.hpp  shader.hpp  text.hpp
shaders/: text.frag  text.geom  text.vert
src/: font.cpp  main.cpp  shader.cpp  text.cpp
